--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^4.3.1",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.9",
+    "react-color": "^2.17.3",
     "react-dom": "^16.8.6",
     "react-icons-kit": "^1.3.1",
     "react-router-dom": "^5.0.1",
