--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "color-picker",
   "version": "1.0.0",
-  "description": "color picker app with react and webpack",
+  "description": "notes saver app with react and webpack",
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --mode development --open --hot",
@@ -13,6 +13,7 @@
     "@jaames/iro": "^4.5.1",
     "bootstrap": "^4.3.1",
     "react": "^16.8.6",
+    "react-app-polyfill": "^1.0.1",
     "react-bootstrap": "^1.0.0-beta.9",
     "react-color": "^2.17.3",
     "react-dom": "^16.8.6",
