--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.6",
+    "css-loader": "^3.1.0",
     "html-webpack-plugin": "^3.2.0",
     "react-redux": "^7.1.0",
     "redux": "^4.0.4",
+    "style-loader": "^0.23.1",
     "uuid": "^3.3.2",
     "webpack": "^4.36.1",
     "webpack-cli": "^3.3.6",
